--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <h5>- Jernigan Antony Michale</h5>
         </aside>
         <footer>
+            <h2>Footer Links</h2>
             <a href="contact.html" id="contact">Contact Us</a>
             <br>
             <br>
