--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a href="about.html">About Us</a>
                 <a href="specials.html">Specials</a>
                 <a href="index.html" class="choice">Home</a>
-                <a href="form/form.html">Sign Up</a>
+                <a href="form/form.html" class="choice">Sign Up</a>
             </div>
             <h1 id="title">POWELL</h1>
         </header>
