File system update and add repeat links

--- a/html/main_pages/specials.html
+++ b/html/main_pages/specials.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="css/special.css">
+        <link rel="stylesheet" href="../../css/special.css">
         <title>
             Specials | Powell Fashion Clothing Shop
         </title>
@@ -10,8 +10,9 @@
         <header>
             <div class="navbar">
                 <a href="about.html">About Us</a>
+                <a href="../../form/form.html">Sign Up</a>
                 <a href="specials.html" class="choice">Specials</a>
-                <a href="index.html">Home</a>
+                <a href="../../index.html">Home</a>
             </div>
             <h1 id="title">SPECIALS</h1>
             <div class="signup">
@@ -26,9 +27,9 @@
             <p id="prompt">(Click on image to view)</p>
             <table class="center">
                 <tr>
-                    <td><a href="special_price/jean_off.html"><img src="img/site/jean_edit.png" alt="Jean"></a></td>
-                    <td><a href="special_price/shirt_off.html"><img src="img/site/shirt_edit.png" alt="Shirt"></a></td>
-                    <td><a href="special_price/top_off.html"><img src="img/site/top_edit.png" alt="Top"></a></td>
+                    <td><a href="../menu_items_off/jean_off.html"><img src="../../img/site/jean_edit.png" alt="Jean"></a></td>
+                    <td><a href="../menu_items_off/shirt_off.html"><img src="../../img/site/shirt_edit.png" alt="Shirt"></a></td>
+                    <td><a href="../menu_items_off/top_off.html"><img src="../../img/site/top_edit.png" alt="Top"></a></td>
                 </tr>
                 <tr>
                     <th>JEAN - 25% OFF!</th>
@@ -38,18 +39,18 @@
             </table>
         </main>
         <footer>
-            <a href="contact.html" id="contact">Contact Us</a>
+            <a href="html/main_pages/contact.html" id="contact">Contact Us</a>
             <br>
             <br>
             <p></p>
             <br>
             <hr>
-            <br>
+            <p class="repeat_link"><a href="index.html" class="choice">Home</a> | <a href="html/main_pages/specials.html">Specials</a> | <a href="form/form.html">Sign Up</a> | <a href="html/main_pages/about.html">About Us</a> | <a href="html/menu_items/dresses.html">Dresses</a> | <a href="html/menu_items/top.html">Top</a> | <a href="html/menu_items/shirt.html">Shirt</a> | <a href="html/menu_items/skirt.html">Skirt</a> | <a href="html/menu_items/pant.html">Pant</a> | <a href="html/menu_items/jean.html">Jean</a></p>
+            <hr>
             <h3>Powell</h3>
             <p>Contacts: 0455 9999 555 | Delivery: 0433 3333 999</p>
             <h4>Address</h4>
             <p>223 Powell St in Bowen, Queensland</p>
-            <br>
         </footer>
     </body>
 </html>
