--- a/html/menu_items_off/jean_off.html
+++ b/html/menu_items_off/jean_off.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="../css/special_price_css.css">
+        <link rel="stylesheet" href="../../css/special_price_css.css">
         <title>
             Jean | Powell Fashion Clothing Shop
         </title>
@@ -9,14 +9,15 @@
     <body>
         <header>
             <div class="navbar">
-                <a href="../about.html">About Us</a>
-                <a href="../specials.html">Specials</a>
-                <a href="../index.html">Home</a>
+                <a href="../main_pages/about.html">About Us</a>
+                <a href="../../form/form.html">Sign Up</a>
+                <a href="../main_pages/specials.html">Specials</a>
+                <a href="../../index.html">Home</a>
             </div>
             <h1 id="title">Jean</h1>
         </header>
         <main>
-            <img src="../img/site/item_image/jean_edit.png" alt="Jean">
+            <img src="../../img/site/jean_edit.png" alt="Jean">
             <br class="info">
             <h3 class="info">Jean</h3>
             <p class="info">This jean is made from the softest lenin from the world and is<br> crafted by artist with more than 1000 hours of experience.<br> This is made to fit our customers to perfection and beyond.</p>
@@ -25,18 +26,18 @@
             <h2 class="info">$ 4.88</h2>
         </main>
         <footer>
-            <a href="../contact.html" id="contact">Contact Us</a>
+            <a href="html/main_pages/contact.html" id="contact">Contact Us</a>
             <br>
             <br>
             <p></p>
             <br>
             <hr>
-            <br>
+            <p class="repeat_link"><a href="index.html" class="choice">Home</a> | <a href="html/main_pages/specials.html">Specials</a> | <a href="form/form.html">Sign Up</a> | <a href="html/main_pages/about.html">About Us</a> | <a href="html/menu_items/dresses.html">Dresses</a> | <a href="html/menu_items/top.html">Top</a> | <a href="html/menu_items/shirt.html">Shirt</a> | <a href="html/menu_items/skirt.html">Skirt</a> | <a href="html/menu_items/pant.html">Pant</a> | <a href="html/menu_items/jean.html">Jean</a></p>
+            <hr>
             <h3>Powell</h3>
             <p>Contacts: 0455 9999 555 | Delivery: 0433 3333 999</p>
             <h4>Address</h4>
             <p>223 Powell St in Bowen, Queensland</p>
-            <br>
         </footer>
     </body>
 </html>
