--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <body>
         <header>
             <div class="navbar">
-                <a href="about.html">About Us</a>
-                <a href="specials.html">Specials</a>
+                <a href="html/main_pages/about.html">About Us</a>
+                <a href="form/form.html">Sign Up</a>
+                <a href="html/main_pages/specials.html">Specials</a>
                 <a href="index.html" class="choice">Home</a>
-                <a href="form/form.html" class="choice">Sign Up</a>
             </div>
             <h1 id="title">POWELL</h1>
         </header>
@@ -21,9 +21,9 @@
             <p id="prompt">(Click on image to view)</p>
             <table class="center">
                 <tr>
-                    <td><a href="menu/dresses.html"><img src="img/site/dress_edit.png" alt="Dresses"></a></td>
-                    <td><a href="menu/top.html"><img src="img/site/top_edit.png" alt="Top"></a></td>
-                    <td><a href="menu/shirt.html"><img src="img/site/shirt_edit.png" alt="Shirt"></a></td>
+                    <td><a href="html/menu_items/dresses.html"><img src="img/site/dress_edit.png" alt="Dresses"></a></td>
+                    <td><a href="html/menu_items/top.html"><img src="img/site/top_edit.png" alt="Top"></a></td>
+                    <td><a href="html/menu_items/shirt.html"><img src="img/site/shirt_edit.png" alt="Shirt"></a></td>
                 </tr>
                 <tr>
                     <th>DRESSES</th>
@@ -35,9 +35,9 @@
             <br>
             <table class="center">
                 <tr>
-                    <td><a href="menu/skirt.html"><img src="img/site/skirt_edit.png" alt="Skirt"></a></td>
-                    <td><a href="menu/pant.html"><img src="img/site/pant_edit.png" alt="Pant"></a></td>
-                    <td><a href="menu/jean.html"><img src="img/site/jean_edit.png" alt="Jean"></a></td>
+                    <td><a href="html/menu_items/skirt.html"><img src="img/site/skirt_edit.png" alt="Skirt"></a></td>
+                    <td><a href="html/menu_items/pant.html"><img src="img/site/pant_edit.png" alt="Pant"></a></td>
+                    <td><a href="html/menu_items/jean.html"><img src="img/site/jean_edit.png" alt="Jean"></a></td>
                 </tr>
                 <tr>
                     <th>HOME STYLES SKIRT</th>
@@ -60,19 +60,18 @@
             <h5>- Jernigan Antony Michale</h5>
         </aside>
         <footer>
-            <h2>Footer Links</h2>
-            <a href="contact.html" id="contact">Contact Us</a>
+            <a href="html/main_pages/contact.html" id="contact">Contact Us</a>
             <br>
             <br>
             <p></p>
             <br>
             <hr>
-            <br>
+            <p class="repeat_link"><a href="index.html" class="choice">Home</a> | <a href="html/main_pages/specials.html">Specials</a> | <a href="form/form.html">Sign Up</a> | <a href="html/main_pages/about.html">About Us</a> | <a href="html/menu_items/dresses.html">Dresses</a> | <a href="html/menu_items/top.html">Top</a> | <a href="html/menu_items/shirt.html">Shirt</a> | <a href="html/menu_items/skirt.html">Skirt</a> | <a href="html/menu_items/pant.html">Pant</a> | <a href="html/menu_items/jean.html">Jean</a></p>
+            <hr>
             <h3>Powell</h3>
             <p>Contacts: 0455 9999 555 | Delivery: 0433 3333 999</p>
             <h4>Address</h4>
             <p>223 Powell St in Bowen, Queensland</p>
-            <br>
         </footer>
     </body>
 </html>
