--- a/html/main_pages/about.html
+++ b/html/main_pages/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="css/about.css">
+        <link rel="stylesheet" href="../../css/about.css">
         <title>
             About Us | Powell Fashion Clothing Shop
         </title>
@@ -10,8 +10,9 @@
         <header>
             <div class="navbar">
                 <a href="about.html" class="choice">About Us</a>
+                <a href="../../form/form.html">Sign Up</a>
                 <a href="specials.html">Specials</a>
-                <a href="index.html">Home</a>
+                <a href="../../index.html">Home</a>
             </div>
             <h1 id="title">About Us</h1>
         </header>
@@ -33,18 +34,18 @@
             </p>
         </main>
         <footer>
-            <a href="contact.html" id="contact">Contact Us</a>
+            <a href="html/main_pages/contact.html" id="contact">Contact Us</a>
             <br>
             <br>
             <p></p>
             <br>
             <hr>
-            <br>
+            <p class="repeat_link"><a href="../../index.html" class="choice">Home</a> | <a href="specials.html">Specials</a> | <a href="../../form/form.html">Sign Up</a> | <a href="about.html">About Us</a> | <a href="../menu_items/dresses.html">Dresses</a> | <a href="../menu_items/top.html">Top</a> | <a href="../menu_items/shirt.html">Shirt</a> | <a href="../menu_items/skirt.html">Skirt</a> | <a href="../menu_items/pant.html">Pant</a> | <a href="../menu_items/jean.html">Jean</a></p>
+            <hr>
             <h3>Powell</h3>
             <p>Contacts: 0455 9999 555 | Delivery: 0433 3333 999</p>
             <h4>Address</h4>
             <p>223 Powell St in Bowen, Queensland</p>
-            <br>
         </footer>
     </body>
 </html>
