--- a/html/main_pages/specials.html
+++ b/html/main_pages/specials.html
@@ -10,21 +10,20 @@
         <header>
             <div class="navbar">
                 <a href="about.html">About Us</a>
-                <a href="../../form/form.html">Sign Up</a>
+                <a href="../../form.html">Sign Up</a>
                 <a href="specials.html" class="choice">Specials</a>
                 <a href="../../index.html">Home</a>
             </div>
-            <h1 id="title">SPECIALS</h1>
             <div class="signup">
-                <a href="specials.html">
+                <a href="../../form.html">
                 <h1>WEEKLY SPECIALS!</h1>
                 <p>Sign up for our latest products and special offers comes to you fist. </p>
                 </a>
             </div>
+            <h2 id="subtitle">IN STORE 25% OFF!</h2>
+            <p id="prompt">(Click on image to view)</p>
         </header>
         <main>
-            <h2 id="subtitle">25% OFF! (In Store Only)</h2>
-            <p id="prompt">(Click on image to view)</p>
             <table class="center">
                 <tr>
                     <td><a href="../menu_items_off/jean_off.html"><img src="../../img/site/jean_edit.png" alt="Jean"></a></td>
@@ -45,7 +44,7 @@
             <p></p>
             <br>
             <hr>
-            <p class="repeat_link"><a href="index.html" class="choice">Home</a> | <a href="html/main_pages/specials.html">Specials</a> | <a href="form/form.html">Sign Up</a> | <a href="html/main_pages/about.html">About Us</a> | <a href="html/menu_items/dresses.html">Dresses</a> | <a href="html/menu_items/top.html">Top</a> | <a href="html/menu_items/shirt.html">Shirt</a> | <a href="html/menu_items/skirt.html">Skirt</a> | <a href="html/menu_items/pant.html">Pant</a> | <a href="html/menu_items/jean.html">Jean</a></p>
+            <p class="repeat_link"><a href="../../index.html" class="choice">Home</a> | <a href="specials.html">Specials</a> | <a href="../../form.html">Sign Up</a> | <a href="about.html">About Us</a> | <a href="../menu_items/dresses.html">Dresses</a> | <a href="../menu_items/top.html">Top</a> | <a href="../menu_items/shirt.html">Shirt</a> | <a href="../menu_items/skirt.html">Skirt</a> | <a href="../menu_items/pant.html">Pant</a> | <a href="../menu_items/jean.html">Jean</a></p>
             <hr>
             <h3>Powell</h3>
             <p>Contacts: 0455 9999 555 | Delivery: 0433 3333 999</p>
