--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
         <header>
             <div class="navbar">
                 <a href="html/main_pages/about.html">About Us</a>
-                <a href="form/form.html">Sign Up</a>
+                <a href="form.html">Sign Up</a>
                 <a href="html/main_pages/specials.html">Specials</a>
                 <a href="index.html" class="choice">Home</a>
             </div>
-            <h1 id="title">POWELL</h1>
         </header>
         <main>
+            <br>
+            <div>
+                <img src="img/site/logo.png" class="logo">
+                </div>
             <h2 id="subtitle">MENU</h2>
             <p id="prompt">(Click on image to view)</p>
             <table class="center">
@@ -53,7 +56,6 @@
                 &#8220;Powell Fashion Clothing has the best clothing I&#8216;ve ever had. Best service in town.&#8221;
             </p>
             <h5>- Maheshram Shunmuganad</h5>
-            <br>
             <p>
                 &#8220;Such a nice place to hang out. Their clothing is awesome.&#8221;
             </p>
@@ -66,7 +68,7 @@
             <p></p>
             <br>
             <hr>
-            <p class="repeat_link"><a href="index.html" class="choice">Home</a> | <a href="html/main_pages/specials.html">Specials</a> | <a href="form/form.html">Sign Up</a> | <a href="html/main_pages/about.html">About Us</a> | <a href="html/menu_items/dresses.html">Dresses</a> | <a href="html/menu_items/top.html">Top</a> | <a href="html/menu_items/shirt.html">Shirt</a> | <a href="html/menu_items/skirt.html">Skirt</a> | <a href="html/menu_items/pant.html">Pant</a> | <a href="html/menu_items/jean.html">Jean</a></p>
+            <p class="repeat_link"><a href="index.html" class="choice">Home</a> | <a href="html/main_pages/specials.html">Specials</a> | <a href="form.html">Sign Up</a> | <a href="html/main_pages/about.html">About Us</a> | <a href="html/menu_items/dresses.html">Dresses</a> | <a href="html/menu_items/top.html">Top</a> | <a href="html/menu_items/shirt.html">Shirt</a> | <a href="html/menu_items/skirt.html">Skirt</a> | <a href="html/menu_items/pant.html">Pant</a> | <a href="html/menu_items/jean.html">Jean</a></p>
             <hr>
             <h3>Powell</h3>
             <p>Contacts: 0455 9999 555 | Delivery: 0433 3333 999</p>
