--- a/html/menu_items/shirt.html
+++ b/html/menu_items/shirt.html
@@ -10,7 +10,7 @@
         <header>
             <div class="navbar">
                 <a href="../main_pages/about.html">About Us</a>
-                <a href="../../form/form.html">Sign Up</a>
+                <a href="../../form.html">Sign Up</a>
                 <a href="../main_pages/specials.html">Specials</a>
                 <a href="../../index.html">Home</a>
             </div>
@@ -31,7 +31,7 @@
             <p></p>
             <br>
             <hr>
-            <p class="repeat_link"><a href="index.html" class="choice">Home</a> | <a href="html/main_pages/specials.html">Specials</a> | <a href="form/form.html">Sign Up</a> | <a href="html/main_pages/about.html">About Us</a> | <a href="html/menu_items/dresses.html">Dresses</a> | <a href="html/menu_items/top.html">Top</a> | <a href="html/menu_items/shirt.html">Shirt</a> | <a href="html/menu_items/skirt.html">Skirt</a> | <a href="html/menu_items/pant.html">Pant</a> | <a href="html/menu_items/jean.html">Jean</a></p>
+            <p class="repeat_link"><a href="../../index.html" class="choice">Home</a> | <a href="../main_pages/specials.html">Specials</a> | <a href="../../form.html">Sign Up</a> | <a href="../main_pages/about.html">About Us</a> | <a href="dresses.html">Dresses</a> | <a href="top.html">Top</a> | <a href="shirt.html">Shirt</a> | <a href="skirt.html">Skirt</a> | <a href="pant.html">Pant</a> | <a href="jean.html">Jean</a></p>
             <hr>
             <h3>Powell</h3>
             <p>Contacts: 0455 9999 555 | Delivery: 0433 3333 999</p>
